fixed chat and module minized bug, collapsible z-index is bigger than modules z-index and added the module icon to the pin and removed the text.

--- a/imports/ui/module-instance/module-instance.scss
+++ b/imports/ui/module-instance/module-instance.scss
@@ -20,6 +20,10 @@
     top: -16px;
     left: calc(50% - 16px);
     z-index: 2;
+    .img {
+      width: 12px;
+      margin: 4px 5px;
+    }
   }
 
   .module {
@@ -29,5 +33,8 @@
   }
   &:active, &:hover {
     z-index: 100;
+  }
+  &.ui-resizable-disabled {
+    height: auto !important;
   }
 }
