--- a/imports/ui/team/sidebar/collapsible/collapsible.scss
+++ b/imports/ui/team/sidebar/collapsible/collapsible.scss
@@ -3,7 +3,7 @@
 @import 'modules/modules';
 
 .collapsible {
-  z-index: 3;
+  z-index: 101;
   display: none;
   position: absolute;
   width: 250px;
